bugfix: popup windows should have its own overflow and height rules

--- a/img/style.less
+++ b/img/style.less
@@ -43,6 +43,8 @@ BODY {
 
 body.lms-ui-popup {
 	display: block;
+	height: auto;
+	overflow: auto;
 }
 
 TABLE		{ border-collapse: collapse; border-color: #000000 }
